[gd_scene load_steps=5 format=3 uid="uid://gktnyqf3rju6"]

[ext_resource type="Script" path="res://gameover_ruutu.gd" id="1_g4eso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpcmd"]
bg_color = Color(0, 0.12261, 0.252501, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_nbu0g"]
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_6ijjl"]
font_size = 20

[node name="GameOverRuutu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4eso")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Paneeli" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.5
offset_top = -220.5
offset_right = 260.5
offset_bottom = 220.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bpcmd")

[node name="GameOverTeksti" type="Label" parent="Paneeli"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -259.5
offset_right = 261.5
offset_bottom = 106.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_nbu0g")
horizontal_alignment = 1

[node name="MuuttuvaTeksti" type="Label" parent="Paneeli"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.5
offset_top = -72.0
offset_right = 1.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_6ijjl")
horizontal_alignment = 1

[node name="RestartNappi" type="Button" parent="Paneeli"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 176.0
offset_bottom = 1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="LopetaNappi" type="Button" parent="Paneeli"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -97.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Quit
"

[connection signal="pressed" from="Paneeli/RestartNappi" to="." method="_on_restart_nappi_pressed"]
[connection signal="pressed" from="Paneeli/LopetaNappi" to="." method="_on_lopeta_nappi_pressed"]
